<resources>
    <string name="app_name">watched</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- Search Page -->
    <string name="search_page_title">Search</string>
    <string name="search_box_placeholder">Search Movie</string>
    <string name="search_result_title_placeholder">Title</string>
    <string name="search_result_rating_placeholder">Rating</string>
    <string name="search_result_actors_placeholder">Actors</string>
    <string name="search_result_plot_placeholder">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus ex arcu, facilisis at sapien nec, pharetra viverra odio. Donec at est luctus,
        vehicula urna placerat, vestibulum lorem. Etiam ullamcorper diam eu lacus dignissim, ac egestas sapien elementum. Duis pulvinar consectetur risus,
        eget laoreet dui lobortis in. Suspendisse libero tortor, placerat et est in, tincidunt efficitur lorem. Curabitur ac viverra neque. Ut luctus,
        justo ut lacinia pellentesque, lacus ipsum feugiat dui, ac iaculis arcu lacus in mi. Etiam accumsan molestie congue.
    </string>

    <!-- Upcoming Page -->
    <string name="upcoming_page_title">Upcoming</string>

    <!-- Watch List Page -->
    <string name="watch_list_page_title">Watch List</string>

    <string-array name="sort_options">
        <item>Date Added (Ascending)</item>
        <item>Date Added (Descending)</item>
        <item>Release Date (Ascending)</item>
        <item>Release Date (Descending)</item>
        <item>Title (Ascending)</item>
        <item>Title (Descending)</item>
    </string-array>


    <!-- Theatres Page -->
    <string name="theatres_page_title">Theatres</string>
    <string name="theatre_name_placeholder">Name</string>
    <string name="theatre_address_placeholder">Address</string>


    <!-- Credits -->

    <string name="credit_title">Credits</string>
    <string name="credit_desc">Desc</string>
    <string name="credit_link">Credit Link</string>


    <string name="api_title">The Movie Database API</string>
    <string name="api_desc">
    The Movie Database (TMDb) is a community built movie and TV database.
        Every piece of data has been added by our amazing community dating back to 2008.
        TMDb\'s strong international focus and breadth of data is largely unmatched and something we\'re incredibly proud of.
        Put simply, we live and breathe community and that\'s precisely what makes us different.
        \n\n
        This product uses the TMDb API but is not endorsed or certified by TMDb.
    </string>
    <string name="api_link">https://www.themoviedb.org/documentation/api</string>

    <string name="places_title">Google Places API</string>
    <string name="places_desc">
        The Places API is a service that returns information about places using HTTP requests.
        Places are defined within this API as establishments, geographic locations, or prominent points of interest.
    </string>
    <string name="places_link">https://developers.google.com/places/web-service/intro</string>

    <string name="logo_title">Stephanie Markert</string>
    <string name="logo_desc">The logo was designed by local graphic designer Stephanie Markert.</string>
    <string name="logo_link">https://www.stephdesigns.ca</string>

    <string name="volley_title">Volley by Google</string>
    <string name="volley_desc">Volley is an HTTP library that makes networking for Android apps easier and, most importantly, faster.</string>
    <string name="volley_link">https://github.com/google/volley</string>

    <string name="picasso_title">Picasso by Square</string>
    <string name="picasso_desc">Picasso is a powerful image downloading and caching library for Android.</string>
    <string name="picasso_link">http://square.github.io/picasso/</string>

    <string name="gson_title">Gson by Google</string>
    <string name="gson_desc">
        Gson is a Java library that can be used to convert Java Objects into their JSON representation. It can also be used to convert a JSON string to an equivalent Java object.
        Gson can work with arbitrary Java objects including pre-existing objects that you do not have source-code of.
    </string>
    <string name="gson_link">https://github.com/google/gson</string>

    <string name="rating_bar_title">Simple Rating Bar</string>
    <string name="rating_bar_desc">Simple Rating Bar is an open source project which features a simple yet powerful RatingBar alternative to Android\'s default.tm</string>
    <string name="rating_bar_link">https://github.com/FlyingPumba/SimpleRatingBar</string>

    <!-- Settings -->
    <string name="settings_title">Settings</string>

    <string name="watch_list_style_title">Watch List Style</string>
    <string name="watch_list_style_poster">Poster</string>
    <string name="watch_list_style_list">List</string>

    <string-array name="watch_list_style_titles">
        <item>@string/watch_list_style_poster</item>
        <item>@string/watch_list_style_list</item>
    </string-array>

    <string-array name="watch_list_style_values">
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="save_location_title">Save Location</string>
    <string name="save_location_description">Should watched save your location, or ask every time?</string>

    <string name="show_watched_title">Show Watched Movies</string>
    <string name="show_watched_description">Should movies you have marked as watched be shown in the watch list?</string>


    <string name="credits_title">Credits</string>
    <string name="credits_description">Credits for the watched application</string>

    <string name="clear_data">Clear Data</string>
    <string name="bug_report">Report a Bug</string>
    <string name="request_feature">Request a Feature</string>



</resources>
