<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="1"
        android:entries="@array/watch_list_style_titles"
        android:entryValues="@array/watch_list_style_values"
        android:key="watch_list_style"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/watch_list_style_title" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="save_location"
        android:summary="@string/save_location_description"
        android:title="@string/save_location_title" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="show_watched"
        android:summary="@string/show_watched_description"
        android:title="@string/show_watched_title" />

    <Preference android:title="@string/clear_data" android:key="clear_data"/>
    <Preference android:title="@string/bug_report" android:key="bug_report"/>
    <Preference android:title="@string/request_feature" android:key="request_feature"/>
    <!--<Preference android:title="@string/credits_title" android:key="credits"/>-->







</PreferenceScreen>
